--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
 						<div class="content">
 							<div>
 								<div class="content_head">
-									<div class="content_text">color</div>
+									<div class="content_text" style="font-weight: 600; font-size: 1.5rem">Color</div>
 									<div class="content_box">
 										<button>Export</button>
-										<button>Edit</button>
 										<button>Save</button>
 									</div>
 								</div>
@@ -103,10 +102,58 @@
 								</div>
 								<!-- Saved Colors -->
 							</div>
+							<div style="padding-top: 2rem">
+								<div class="content_head">
+									<div class="content_text" style="font-weight: 600; font-size: 1.5rem">Example</div>
+								</div>
+
+								<div class="color-ex">
+									<div class="ex-card">
+										<div class="card-layout">
+											<div class="card-layout-content">
+												<div class="font-medium">Buttons</div>
+											</div>
+										</div>
+										<div class="card-layout-2">
+											<div class="card-content">
+												<div class="cord-ex">
+													<div class="button-ex" style="background-color: #9ca3af">
+														Default
+													</div>
+												</div>
+												<div class="cord-ex">
+													<div class="button-ex" style="background-color: #6b7280">Hover</div>
+												</div>
+												<div class="cord-ex">
+													<div class="button-ex" style="background-color: #4b5563">
+														Active
+													</div>
+												</div>
+												<div class="cord-ex">
+													<div
+														class="button-ex"
+														style="background-color: #e5e7eb; color: #9ca3af">
+														Disabled
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<footer class="footer">
+			<div class="line" />
+			<div class="discript">
+				<span>HANNAM</span>
+				<span>·</span>
+				<span>MIDEA</span><span>·</span><span>LEEGYUWON</span>
+			</div>
+		</footer>
 	</body>
 </html>
